fix: Replace dark mode package with new one that works with gatsby 3.x

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -145,8 +145,8 @@ input {
   color: var(--color-text-primary);
 }
 
-body:not(.dark-mode) .dark-mode-only,
-.dark-mode .light-mode-only {
+body:not(.dark) .dark-mode-only,
+.dark .light-mode-only {
   display: none;
 }
 
