--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -148,8 +148,7 @@ body {
   --space-128: 12.8rem;
   --space-160: 16rem;
 }
-
-.dark-mode {
+.dark {
   /* Colors */
   --color-brand-primary: var(--brand5);
   --color-text-primary: var(--black4);
